<resources>
    <string name="app_name">Driod Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="intro_text">Droid Desserts</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donuts_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="icecream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="icecream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a Froyo.</string>
</resources>